--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -26,6 +26,7 @@ supported_commands_by_ecu:
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0133:BARO
+  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 013C:CATEMP11
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - 0142:VPWR
@@ -44,6 +45,7 @@ supported_commands_by_ecu:
   - 0162:TQ_ACT
   - 0163:TQ_REF
   - 0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
+  - 016B:EGRTA,EGRTA_SUP,EGRTA_WIDE,EGRTA_WR_SUP,EGRTB,EGRTB_SUP,EGRTB_WIDE,EGRTB_WR_SUP,EGRTC,EGRTC_SUP,EGRTC_WIDE,EGRTC_WR_SUP,EGRTD,EGRTD_SUP,EGRTD_WIDE,EGRTD_WR_SUP
   - 018E:TQ_FR
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 019E:EXH_RATE
