--- a/tests/test_cases/2024/commands/7E4.7EC.220105|fc=1.yaml
+++ b/tests/test_cases/2024/commands/7E4.7EC.220105|fc=1.yaml
@@ -31,12 +31,32 @@ test_cases:
     7EC258F000000000000
     7EC260000000000AAAA
 - expected_values:
-    SANTAFEHYB_HVBAT_SOC_DISP: 56.5
+    SANTAFEHYB_HVBAT_SOC_DISP: 50.5
   response: |-
     7EC102E620105E03A04
     7EC2100008F15008000
     7EC2200000000000014
     7EC23B4190000005000
     7EC2400000000000000
-    7EC2571000000000000
+    7EC2565000000000000
+    7EC260000000000AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_SOC_DISP: 72
+  response: |-
+    7EC102E620105E03A04
+    7EC2100008F15008000
+    7EC2200000000000014
+    7EC23B4190000005000
+    7EC2400000000000000
+    7EC2590000000000000
+    7EC260000000000AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_SOC_DISP: 71
+  response: |-
+    7EC102E620105E03A04
+    7EC210000B40000B400
+    7EC2200000000000014
+    7EC23B4190000005000
+    7EC2400000000000000
+    7EC258E000000000000
     7EC260000000000AAAA
