--- a/tests/test_cases/2024/commands/7E4.7EC.220103|fc=1.yaml
+++ b/tests/test_cases/2024/commands/7E4.7EC.220103|fc=1.yaml
@@ -1,45 +1,45 @@
 command_id: 7E4.7EC.220103|fc=1
 test_cases:
 - expected_values:
-    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.62
-    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.6
-    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.6
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.56
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.54
   response: |-
     7EC1027620103FFFFFF
-    7EC21FFB5B4B5B5B5B5
-    7EC22B4B5B5B4B4B5B5
-    7EC23B4B5B5B5B4B5B5
-    7EC24B4B4B4B5B4B4B4
-    7EC25B4B4B4B4B4AAAA
+    7EC21FFB2B2B2B2B2B2
+    7EC22B2B2B2B2B2B2B2
+    7EC23B2B2B2B2B2B2B2
+    7EC24B2B2B2B2B1B1B1
+    7EC25B1B1B1B1B1AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.8
@@ -160,6 +160,46 @@ test_cases:
     7EC23BEBFBEBFBEBFBE
     7EC24BEBEBEBFBEBEBE
     7EC25BEBEBFBEBEAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.82
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFBFBFBFBFBFBF
+    7EC22BFBFBFBFBFBFBF
+    7EC23BFBFBFBFBFBFBF
+    7EC24BFBEBFBFBFBFBF
+    7EC25BFBFBFBFBFAAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.82
