--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -1,5 +1,7 @@
 model_year: 2021
 supported_commands_by_ecu:
+  "7A0":
+  - 7A0.7A8.22C00B|fc=1:SANTAFEHYB_TP_FL,SANTAFEHYB_TP_FR,SANTAFEHYB_TP_RL,SANTAFEHYB_TP_RR
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -51,6 +53,42 @@ supported_commands_by_ecu:
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 019E:EXH_RATE
   - 01A6:ODO
+  - 7E0.0103:FUELSYS1,FUELSYS2
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0106:SHRTFT1
+  - 7E0.0107:LONGFT1
+  - 7E0.010B:MAP
+  - 7E0.010C:RPM
+  - 7E0.010D:VSS
+  - 7E0.010E:SPARKADV
+  - 7E0.010F:IAT
+  - 7E0.0110:MAF
+  - 7E0.011F:RUNTM
+  - 7E0.0123:FRP
+  - 7E0.012C:EGR_PCT
+  - 7E0.012D:EGR_ERR
+  - 7E0.012E:EVAP_PCT
+  - 7E0.012F:FLI
+  - 7E0.0131:CLR_DIST
+  - 7E0.0133:BARO
+  - 7E0.013C:CATEMP11
+  - 7E0.0142:VPWR
+  - 7E0.0143:LOAD_ABS
+  - 7E0.0144:EQ_RAT
+  - 7E0.0146:AAT
+  - 7E0.014C:TAC_PCT
+  - 7E0.0151:FUEL_TYP
+  - 7E0.0154:EVAP_VP_WIDE
+  - 7E0.0155:STSO2FT1
+  - 7E0.0156:LGSO2FT1
+  - 7E0.0162:TQ_ACT
+  - 7E0.0163:TQ_REF
+  - 7E0.0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
+  - 7E0.016B:EGRTA,EGRTA_SUP,EGRTA_WIDE,EGRTA_WR_SUP,EGRTB,EGRTB_SUP,EGRTB_WIDE,EGRTB_WR_SUP,EGRTC,EGRTC_SUP,EGRTC_WIDE,EGRTC_WR_SUP,EGRTD,EGRTD_SUP,EGRTD_WIDE,EGRTD_WR_SUP
+  - 7E0.018E:TQ_FR
+  - 7E0.019D:FUEL_RATE_ALT,VFUEL_RATE
+  - 7E0.019E:EXH_RATE
+  - 7E0.01A6:ODO
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 010C:RPM
@@ -62,6 +100,7 @@ supported_commands_by_ecu:
   - 0121:MIL_DIST
   - 0130:WARM_UPS
   - 0131:CLR_DIST
+  - 7E2.7EA.22E004:SANTAFEHYB_VPWR
   "7E3":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0121:MIL_DIST
@@ -74,6 +113,12 @@ supported_commands_by_ecu:
   - 0131:CLR_DIST
   - 015B:BAT_SOC
   - 019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
+  - 7E4.7EC.015B
+  - 7E4.7EC.220101|fc=1:SANTAFEHYB_HVBAT_CHARGING,SANTAFEHYB_HVBAT_PLUG_NORM,SANTAFEHYB_HVBAT_PLUG_RAPD,SANTAFEHYB_HVBAT_SOC
+  - 7E4.7EC.220102|fc=1:SANTAFEHYB_HVBAT_CMU001_VOLT,SANTAFEHYB_HVBAT_CMU002_VOLT,SANTAFEHYB_HVBAT_CMU003_VOLT,SANTAFEHYB_HVBAT_CMU004_VOLT,SANTAFEHYB_HVBAT_CMU005_VOLT,SANTAFEHYB_HVBAT_CMU006_VOLT,SANTAFEHYB_HVBAT_CMU007_VOLT,SANTAFEHYB_HVBAT_CMU008_VOLT,SANTAFEHYB_HVBAT_CMU009_VOLT,SANTAFEHYB_HVBAT_CMU010_VOLT,SANTAFEHYB_HVBAT_CMU011_VOLT,SANTAFEHYB_HVBAT_CMU012_VOLT,SANTAFEHYB_HVBAT_CMU013_VOLT,SANTAFEHYB_HVBAT_CMU014_VOLT,SANTAFEHYB_HVBAT_CMU015_VOLT,SANTAFEHYB_HVBAT_CMU016_VOLT,SANTAFEHYB_HVBAT_CMU017_VOLT,SANTAFEHYB_HVBAT_CMU018_VOLT,SANTAFEHYB_HVBAT_CMU019_VOLT,SANTAFEHYB_HVBAT_CMU020_VOLT,SANTAFEHYB_HVBAT_CMU021_VOLT,SANTAFEHYB_HVBAT_CMU022_VOLT,SANTAFEHYB_HVBAT_CMU023_VOLT,SANTAFEHYB_HVBAT_CMU024_VOLT,SANTAFEHYB_HVBAT_CMU025_VOLT,SANTAFEHYB_HVBAT_CMU026_VOLT,SANTAFEHYB_HVBAT_CMU027_VOLT,SANTAFEHYB_HVBAT_CMU028_VOLT,SANTAFEHYB_HVBAT_CMU029_VOLT,SANTAFEHYB_HVBAT_CMU030_VOLT,SANTAFEHYB_HVBAT_CMU031_VOLT,SANTAFEHYB_HVBAT_CMU032_VOLT
+  - 7E4.7EC.220103|fc=1:SANTAFEHYB_HVBAT_CMU033_VOLT,SANTAFEHYB_HVBAT_CMU034_VOLT,SANTAFEHYB_HVBAT_CMU035_VOLT,SANTAFEHYB_HVBAT_CMU036_VOLT,SANTAFEHYB_HVBAT_CMU037_VOLT,SANTAFEHYB_HVBAT_CMU038_VOLT,SANTAFEHYB_HVBAT_CMU039_VOLT,SANTAFEHYB_HVBAT_CMU040_VOLT,SANTAFEHYB_HVBAT_CMU041_VOLT,SANTAFEHYB_HVBAT_CMU042_VOLT,SANTAFEHYB_HVBAT_CMU043_VOLT,SANTAFEHYB_HVBAT_CMU044_VOLT,SANTAFEHYB_HVBAT_CMU045_VOLT,SANTAFEHYB_HVBAT_CMU046_VOLT,SANTAFEHYB_HVBAT_CMU047_VOLT,SANTAFEHYB_HVBAT_CMU048_VOLT,SANTAFEHYB_HVBAT_CMU049_VOLT,SANTAFEHYB_HVBAT_CMU050_VOLT,SANTAFEHYB_HVBAT_CMU051_VOLT,SANTAFEHYB_HVBAT_CMU052_VOLT,SANTAFEHYB_HVBAT_CMU053_VOLT,SANTAFEHYB_HVBAT_CMU054_VOLT,SANTAFEHYB_HVBAT_CMU055_VOLT,SANTAFEHYB_HVBAT_CMU056_VOLT,SANTAFEHYB_HVBAT_CMU057_VOLT,SANTAFEHYB_HVBAT_CMU058_VOLT,SANTAFEHYB_HVBAT_CMU059_VOLT,SANTAFEHYB_HVBAT_CMU060_VOLT,SANTAFEHYB_HVBAT_CMU061_VOLT,SANTAFEHYB_HVBAT_CMU062_VOLT,SANTAFEHYB_HVBAT_CMU063_VOLT,SANTAFEHYB_HVBAT_CMU064_VOLT
+  - 7E4.7EC.220104|fc=1:SANTAFEHYB_HVBAT_CMU065_VOLT,SANTAFEHYB_HVBAT_CMU066_VOLT,SANTAFEHYB_HVBAT_CMU067_VOLT,SANTAFEHYB_HVBAT_CMU068_VOLT,SANTAFEHYB_HVBAT_CMU069_VOLT,SANTAFEHYB_HVBAT_CMU070_VOLT,SANTAFEHYB_HVBAT_CMU071_VOLT,SANTAFEHYB_HVBAT_CMU072_VOLT
+  - 7E4.7EC.220105|fc=1:SANTAFEHYB_HVBAT_SOC_DISP
   "7E6":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 010C:RPM
@@ -85,3 +130,4 @@ supported_commands_by_ecu:
   - 0121:MIL_DIST
   - 0130:WARM_UPS
   - 0131:CLR_DIST
+  - 7E7.7EF.22C101:SANTAFEHYB_TIRE_FL_SPD,SANTAFEHYB_TIRE_FR_SPD,SANTAFEHYB_TIRE_RL_SPD,SANTAFEHYB_TIRE_RR_SPD
