--- a/tests/test_cases/2021/commands/7E4.7EC.220102|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7E4.7EC.220102|fc=1.yaml
@@ -41,6 +41,86 @@ test_cases:
     7EC24AFAFAFAFAFAEAF
     7EC25AEAFAEAEAEAAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.48
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFAEAEAEAEAEAE
+    7EC22AEAEAEAEAEAEAE
+    7EC23AEAEAEAEAEAFAE
+    7EC24AFAEAEAEAEAEAE
+    7EC25AEAEAEAEAEAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.82
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFBEBEBEBEBEBE
+    7EC22BEBEBFBFBFBEBE
+    7EC23BEBFBEBEBEBEBE
+    7EC24BFBEBEBEBEBFBE
+    7EC25BFBEBFBFBFAAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU003_VOLT: 3.82
