--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -18,6 +18,54 @@ supported_commands_by_ecu:
   "7DF":
   - 7DF.010D
   "7E0":
+  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 0103:FUELSYS1,FUELSYS2
+  - 0104:LOAD_PCT
+  - 0106:SHRTFT1
+  - 0107:LONGFT1
+  - 010B:MAP
+  - 010C:RPM
+  - 010D:VSS
+  - 010E:SPARKADV
+  - 010F:IAT
+  - 0110:MAF
+  - 0111:TP
+  - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
+  - 0115:O2S12,SHRTFT11
+  - 011C:OBDSUP
+  - 011F:RUNTM
+  - 0121:MIL_DIST
+  - 0123:FRP
+  - 012C:EGR_PCT
+  - 012D:EGR_ERR
+  - 012E:EVAP_PCT
+  - 012F:FLI
+  - 0130:WARM_UPS
+  - 0131:CLR_DIST
+  - 0133:BARO
+  - 013C:CATEMP11
+  - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
+  - 0142:VPWR
+  - 0143:LOAD_ABS
+  - 0144:EQ_RAT
+  - 0145:TP_R
+  - 0146:AAT
+  - 0147:TP_B
+  - 0149:APP_D
+  - 014A:APP_E
+  - 014C:TAC_PCT
+  - 0151:FUEL_TYP
+  - 0153:EVAP_VPA
+  - 0155:STSO2FT1
+  - 0156:LGSO2FT1
+  - 0162:TQ_ACT
+  - 0163:TQ_REF
+  - 0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
+  - 016B:EGRTA,EGRTA_SUP,EGRTA_WIDE,EGRTA_WR_SUP,EGRTB,EGRTB_SUP,EGRTB_WIDE,EGRTB_WR_SUP,EGRTC,EGRTC_SUP,EGRTC_WIDE,EGRTC_WR_SUP,EGRTD,EGRTD_SUP,EGRTD_WIDE,EGRTD_WR_SUP
+  - 018E:TQ_FR
+  - 019D:FUEL_RATE_ALT,VFUEL_RATE
+  - 019E:EXH_RATE
+  - 01A6:ODO
   - 7E0.010D:VSS
   - 7E0.012F:FLI
   - 7E0.0131:CLR_DIST
@@ -27,10 +75,31 @@ supported_commands_by_ecu:
   - 7E0.22E002
   - 7E0.22E004
   - 7E0.22E00A
+  "7E1":
+  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 010C:RPM
+  - 0130:WARM_UPS
+  - 0131:CLR_DIST
+  - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   "7E2":
+  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 0121:MIL_DIST
+  - 0130:WARM_UPS
+  - 0131:CLR_DIST
   - 7E2.7EA.0131
   - 7E2.7EA.22E004:SANTAFEHYB_VPWR
+  "7E3":
+  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 0121:MIL_DIST
+  - 0130:WARM_UPS
+  - 0131:CLR_DIST
   "7E4":
+  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 0121:MIL_DIST
+  - 0130:WARM_UPS
+  - 0131:CLR_DIST
+  - 015B:BAT_SOC
+  - 019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
   - 7E4.220101
   - 7E4.220102
   - 7E4.220103
@@ -44,6 +113,10 @@ supported_commands_by_ecu:
   - 7E4.7EC.220104|fc=1:SANTAFEHYB_HVBAT_CMU065_VOLT,SANTAFEHYB_HVBAT_CMU066_VOLT,SANTAFEHYB_HVBAT_CMU067_VOLT,SANTAFEHYB_HVBAT_CMU068_VOLT,SANTAFEHYB_HVBAT_CMU069_VOLT,SANTAFEHYB_HVBAT_CMU070_VOLT,SANTAFEHYB_HVBAT_CMU071_VOLT,SANTAFEHYB_HVBAT_CMU072_VOLT
   - 7E4.7EC.220105|fc=1:SANTAFEHYB_HVBAT_SOC_DISP
   "7E7":
+  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 0121:MIL_DIST
+  - 0130:WARM_UPS
+  - 0131:CLR_DIST
   - 7E7.7EF.22C101:SANTAFEHYB_TIRE_FL_SPD,SANTAFEHYB_TIRE_FR_SPD,SANTAFEHYB_TIRE_RL_SPD,SANTAFEHYB_TIRE_RR_SPD
 unsupported_commands_by_ecu:
   "744":
