Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -99,6 +99,18 @@ test_cases:
 - expected_values:
     SANTAFEHYB_TP_FL: 34.8
     SANTAFEHYB_TP_FR: 0
+    SANTAFEHYB_TP_RL: 0.8
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
+    7A821F8AE3A000400B4
+    7A8223C000400AE3A00
+    7A8230400B03B000400
+    7A824378DB08DB08DB0
+    7A8258DB0AAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 34.8
+    SANTAFEHYB_TP_FR: 0
     SANTAFEHYB_TP_RL: 1.2
     SANTAFEHYB_TP_RR: 0
   response: |-
@@ -135,14 +147,14 @@ test_cases:
 - expected_values:
     SANTAFEHYB_TP_FL: 35.2
     SANTAFEHYB_TP_FR: 0
-    SANTAFEHYB_TP_RL: 0.8
+    SANTAFEHYB_TP_RL: 1
     SANTAFEHYB_TP_RR: 0
   response: |-
     7A8102462C00BFFFFFF
-    7A821F8B04E000400B4
-    7A8224E000400B54D00
-    7A8230400AF4C000400
-    7A8244D8DB08DB08DB0
+    7A821F8B03A000400B4
+    7A8223B000500AE3A00
+    7A8230400B03A000500
+    7A824378DB08DB08DB0
     7A8258DB0AAAAAAAAAA
 - expected_values:
     SANTAFEHYB_TP_FL: 36.2
