--- a/tests/test_cases/2025/commands/7E0.0131.yaml
+++ b/tests/test_cases/2025/commands/7E0.0131.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     CLR_DIST: 7977
   response: 7E80441311F29
+- expected_values:
+    CLR_DIST: 13132
+  response: 7E8044131334C
