--- a/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
+++ b/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
@@ -23,6 +23,15 @@ test_cases:
   response: |-
     7EA102762E004BD71F0
     7EA21000000000B0006
+    7EA22F0200C00000000
+    7EA2300000000000000
+    7EA2400000000FFECFF
+    7EA25ECFFEDFFEDAAAA
+- expected_values:
+    SANTAFEHYB_VPWR: 0
+  response: |-
+    7EA102762E004BD71F0
+    7EA21000000000B0006
     7EA22FD200000000000
     7EA2300000000000000
     7EA2400000000FFD5FF
