--- a/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
@@ -1,6 +1,22 @@
 command_id: 7E4.7EC.220104|fc=1
 test_cases:
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.36
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 3.34
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.36
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.36
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 3.34
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 3.34
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.32
+  response: |-
+    7EC1027620104FF0000
+    7EC2100A8A7A8A8A7A7
+    7EC22A6A60000000000
+    7EC2300000000000000
+    7EC2400000000000000
+    7EC250000000000AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU065_VOLT: 3.4
     SANTAFEHYB_HVBAT_CMU066_VOLT: 3.4
     SANTAFEHYB_HVBAT_CMU067_VOLT: 3.4
@@ -33,18 +49,18 @@ test_cases:
     7EC2400000000000000
     7EC250000000000AAAA
 - expected_values:
-    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU066_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU069_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU070_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.5
   response: |-
     7EC1027620104FF0000
-    7EC2100B1B0B1B1B0B0
-    7EC22B0B00000000000
+    7EC2100B0B0B0B0B0B0
+    7EC22AFAF0000000000
     7EC2300000000000000
     7EC2400000000000000
     7EC250000000000AAAA
