--- a/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
@@ -1,6 +1,46 @@
 command_id: 7E4.7EC.220103|fc=1
 test_cases:
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.38
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.38
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.38
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.38
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.4
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFA9A9AAAAAAAA
+    7EC22AAAAAAAAAAAAAA
+    7EC23AAAAAAAAA9AAAA
+    7EC24AAAAAAAAAAAAAA
+    7EC25AAAAAAA9AAAAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.4
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.4
     SANTAFEHYB_HVBAT_CMU035_VOLT: 3.4
@@ -122,13 +162,13 @@ test_cases:
     7EC25AFAFAFAFAFAAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU036_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU037_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU041_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU042_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU043_VOLT: 3.54
@@ -138,10 +178,10 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU047_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU048_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU049_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU054_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU055_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU056_VOLT: 3.54
@@ -152,14 +192,14 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU061_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU062_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU063_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.52
   response: |-
     7EC1027620103FFFFFF
-    7EC21FFB0B1B1B1B1B1
-    7EC22B1B1B1B1B1B1B1
-    7EC23B1B1B1B1B1B1B1
-    7EC24B1B1B1B1B1B1B1
-    7EC25B1B1B1B0B1AAAA
+    7EC21FFB0B0B0B1B1B0
+    7EC22B0B0B1B1B1B1B1
+    7EC23B1B1B1B1B0B0B0
+    7EC24B0B1B1B1B1B1B1
+    7EC25B1B1B1B0B0AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.8
