Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
@@ -17,18 +17,18 @@ test_cases:
     7EC2400000000000000
     7EC250000000000AAAA
 - expected_values:
-    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.4
-    SANTAFEHYB_HVBAT_CMU066_VOLT: 3.4
-    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.4
-    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.4
-    SANTAFEHYB_HVBAT_CMU069_VOLT: 3.4
-    SANTAFEHYB_HVBAT_CMU070_VOLT: 3.4
-    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.4
-    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.4
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.36
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 3.36
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.36
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.36
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 3.36
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 3.36
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.34
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.34
   response: |-
     7EC1027620104FF0000
-    7EC2100AAAAAAAAAAAA
-    7EC22AAAA0000000000
+    7EC2100A8A8A8A8A8A8
+    7EC22A7A70000000000
     7EC2300000000000000
     7EC2400000000000000
     7EC250000000000AAAA
@@ -77,6 +77,22 @@ test_cases:
     7EC1027620104FF0000
     7EC2100BFBFBFBFBFBF
     7EC22BFBF0000000000
+    7EC2300000000000000
+    7EC2400000000000000
+    7EC250000000000AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.84
+  response: |-
+    7EC1027620104FF0000
+    7EC2100BFBFBFBFBFC0
+    7EC22C0C00000000000
     7EC2300000000000000
     7EC2400000000000000
     7EC250000000000AAAA
