--- a/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
@@ -41,6 +41,46 @@ test_cases:
     7EC24A9A9A9A9A9A9A9
     7EC25A9A9A9A9A9AAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.46
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.48
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFADAEAEAFAFAF
+    7EC22AFAFAFAFAFAFAF
+    7EC23AFAFAFAFAFAFAF
+    7EC24AFAFAFAFAFAFAF
+    7EC25AFAFAFAEAEAAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.48
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU003_VOLT: 3.5
@@ -209,22 +249,22 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU006_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU007_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU008_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU010_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU011_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU012_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU014_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU015_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU018_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU019_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU022_VOLT: 3.54
-    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.52
-    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.54
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.54
     SANTAFEHYB_HVBAT_CMU025_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU026_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU027_VOLT: 3.52
@@ -236,9 +276,9 @@ test_cases:
   response: |-
     7EC1027620102FFFFFF
     7EC21FFB0B0B0B0B0B0
-    7EC22B0B0B1B0B0B1B0
-    7EC23B0B0B1B1B0B1B1
-    7EC24B1B1B0B0B0B0B0
+    7EC22B0B0B0B0B0B1B1
+    7EC23B0B0B0B0B0B1B0
+    7EC24B0B1B1B1B0B0B0
     7EC25B0B0B0B0B0AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.8
@@ -483,6 +523,46 @@ test_cases:
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.84
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFC0C0BFBFBFBF
+    7EC22BFBFBFBFBFBFBF
+    7EC23BFBFBFBFBFBFBF
+    7EC24BFBFBFBFBFBFBF
+    7EC25BFBFBFC0C0AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU003_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU004_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU005_VOLT: 3.84
@@ -560,3 +640,43 @@ test_cases:
     7EC23CCCCCCCCCCCCCC
     7EC24CDCCCDCCCCCCCD
     7EC25CCCDCCCDCCAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 4.1
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 4.1
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 4.1
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFCECDCCCCCCCC
+    7EC22CCCCCCCCCCCCCC
+    7EC23CCCCCCCCCCCCCC
+    7EC24CCCCCCCCCCCCCC
+    7EC25CCCCCCCDCDAAAA
