Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
@@ -33,6 +33,22 @@ test_cases:
     7EC2400000000000000
     7EC250000000000AAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.48
+  response: |-
+    7EC1027620104FF0000
+    7EC2100AFAFAFAFAFAF
+    7EC22AEAE0000000000
+    7EC2300000000000000
+    7EC2400000000000000
+    7EC250000000000AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU065_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU066_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU067_VOLT: 3.52
@@ -65,7 +81,7 @@ test_cases:
     7EC2400000000000000
     7EC250000000000AAAA
 - expected_values:
-    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU066_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU067_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU068_VOLT: 3.82
@@ -75,7 +91,7 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU072_VOLT: 3.82
   response: |-
     7EC1027620104FF0000
-    7EC2100BFBFBFBFBFBF
+    7EC2100BEBFBFBFBFBF
     7EC22BFBF0000000000
     7EC2300000000000000
     7EC2400000000000000
@@ -129,17 +145,17 @@ test_cases:
     7EC2400000000000000
     7EC250000000000AAAA
 - expected_values:
-    SANTAFEHYB_HVBAT_CMU065_VOLT: 4.1
-    SANTAFEHYB_HVBAT_CMU066_VOLT: 4.1
-    SANTAFEHYB_HVBAT_CMU067_VOLT: 4.1
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 4.08
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 4.08
     SANTAFEHYB_HVBAT_CMU068_VOLT: 4.1
-    SANTAFEHYB_HVBAT_CMU069_VOLT: 4.12
-    SANTAFEHYB_HVBAT_CMU070_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 4.1
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 4.1
     SANTAFEHYB_HVBAT_CMU071_VOLT: 4.12
     SANTAFEHYB_HVBAT_CMU072_VOLT: 4.12
   response: |-
     7EC1027620104FF0000
-    7EC2100CDCDCDCDCECE
+    7EC2100CCCCCCCDCDCD
     7EC22CECE0000000000
     7EC2300000000000000
     7EC2400000000000000
