--- a/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
@@ -321,11 +321,51 @@ test_cases:
     7EC24BEBEBFBEBEBEBE
     7EC25BEBEBEBFBFAAAA
 - expected_values:
-    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.82
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFBEBEBEBEBEBE
+    7EC22BEBEBFBFBFBFBF
+    7EC23BEBEBEBEBEBFBE
+    7EC24BFBFBFBFBEBEBE
+    7EC25BEBEBEBEBFAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU004_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU006_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU007_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU008_VOLT: 3.82
@@ -335,7 +375,7 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU012_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU013_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU014_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU016_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU017_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU018_VOLT: 3.82
@@ -346,20 +386,60 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU023_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU024_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU025_VOLT: 3.8
-    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.8
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.8
     SANTAFEHYB_HVBAT_CMU029_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU030_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU031_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU032_VOLT: 3.82
   response: |-
     7EC1027620102FFFFFF
-    7EC21FFBFBFBFBFBFBF
+    7EC21FFBEBEBEBFBEBF
     7EC22BFBFBFBFBFBFBF
-    7EC23BFBFBFBFBFBFBF
-    7EC24BFBFBFBFBEBFBF
-    7EC25BFBFBFBFBFAAAA
+    7EC23BFBEBFBFBFBFBF
+    7EC24BFBFBFBFBEBEBE
+    7EC25BEBFBFBFBFAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.84
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFBFBFBFBFBFBF
+    7EC22BFC0C0C0C0C0C0
+    7EC23BFBFBFBFBFC0C0
+    7EC24C0C0C0C0BFBFBF
+    7EC25BFBFBFC0C0AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.84
@@ -524,42 +604,42 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU003_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU014_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU015_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU016_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU025_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU026_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU027_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU028_VOLT: 3.82
-    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU030_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU031_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU032_VOLT: 3.84
   response: |-
     7EC1027620102FFFFFF
-    7EC21FFC0C0BFBFBFBF
-    7EC22BFBFBFBFBFBFBF
-    7EC23BFBFBFBFBFBFBF
-    7EC24BFBFBFBFBFBFBF
-    7EC25BFBFBFC0C0AAAA
+    7EC21FFC0C0BFC0C0C0
+    7EC22C0C0C0C0C0C0C0
+    7EC23BFBFBFC0C0C0C0
+    7EC24C0C0C0C0BFBFBF
+    7EC25BFC0BFC0C0AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.84
