Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -51,6 +51,18 @@ test_cases:
 - expected_values:
     SANTAFEHYB_TP_FL: 34.2
     SANTAFEHYB_TP_FR: 0
+    SANTAFEHYB_TP_RL: 0
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
+    7A821F8AB3800040000
+    7A82200000002000000
+    7A82300020000000002
+    7A824388DB0FFFFFFFF
+    7A825FFFFAAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 34.2
+    SANTAFEHYB_TP_FR: 0
     SANTAFEHYB_TP_RL: 0.8
     SANTAFEHYB_TP_RR: 0
   response: |-
