--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -38,6 +38,21 @@ test_cases:
   response: |-
     7EC103E6201018FF3FF
     7EC21EF5B0000000000
+    7EC22FF0C0A361C181A
+    7EC231C1C1800002CB5
+    7EC2445B50100009100
+    7EC2500996400009939
+    7EC2600002931000027
+    7EC2726000E8F3B0001
+    7EC280505AA000003E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 45.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF5B0000000000
     7EC22FF2A0A531F1D1D
     7EC231E1E1C00003CB7
     7EC2447B70E00008900
@@ -285,6 +300,21 @@ test_cases:
     7EC260000290E000027
     7EC2704000E82820001
     7EC2808073A11BE03E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 53
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF6A0000000000
+    7EC2200000A5B1E1B1C
+    7EC231E1E1B00002CB8
+    7EC2425B70100007D00
+    7EC2500996C0000993D
+    7EC2600002933000027
+    7EC2727000E8FEE0000
+    7EC28000000000003E8
 - expected_values:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
