--- a/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
@@ -114,6 +114,22 @@ test_cases:
     7EC250000000000AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU065_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.84
+  response: |-
+    7EC1027620104FF0000
+    7EC2100BFBFBFBFC0C0
+    7EC22C0C00000000000
+    7EC2300000000000000
+    7EC2400000000000000
+    7EC250000000000AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU066_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU067_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU068_VOLT: 3.84
