Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -413,6 +413,21 @@ test_cases:
   response: |-
     7EC103E6201018FF3FF
     7EC21EF6F0000000000
+    7EC22FE1C0AA1241F20
+    7EC2324241F00002DBE
+    7EC2447BD0E08669100
+    7EC2500999200009962
+    7EC260000293D000027
+    7EC2730000E93060001
+    7EC2812073A11CA03E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 55.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF6F0000000000
     7EC22FEE40A78211D1E
     7EC2320201C000030BA
     7EC243EB90E054E9200
