Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E0.0134.yaml
+++ b/tests/test_cases/2025/commands/7E0.0134.yaml
@@ -5,17 +5,25 @@ test_cases:
     O2S11_CURRENT: -0.99609
   response: 7E806413465AF7F01
 - expected_values:
-    LAMBDA11_CURRENT: 0.9697
-    O2S11_CURRENT: -0.11328
-  response: 7E80641347C1F7FE3
+    LAMBDA11_CURRENT: 0.99997
+    O2S11_CURRENT: -0.01953
+  response: 7E80641347FFF7FFB
 - expected_values:
     LAMBDA11_CURRENT: 1.00266
     O2S11_CURRENT: -0.01172
   response: 7E806413480577FFD
 - expected_values:
+    LAMBDA11_CURRENT: 1.00681
+    O2S11_CURRENT: 0
+  response: 7E806413480DF8000
+- expected_values:
+    LAMBDA11_CURRENT: 1.55515
+    O2S11_CURRENT: 0.78125
+  response: 7E8064134C70F80C8
+- expected_values:
     LAMBDA11_CURRENT: 1.99
-    O2S11_CURRENT: 1.21094
-  response: 7E8064134FFFF8136
+    O2S11_CURRENT: 1.14844
+  response: 7E8064134FF478126
 - expected_values:
     LAMBDA11_CURRENT: 1.99
     O2S11_CURRENT: 2.27344
