--- a/tests/test_cases/2025/commands/7E0.0144.yaml
+++ b/tests/test_cases/2025/commands/7E0.0144.yaml
@@ -1,11 +1,20 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
+    EQ_RAT: 0.87254
+  response: 7E80441446FAF
+- expected_values:
     EQ_RAT: 0.87498
   response: 7E80441446FFF
 - expected_values:
     EQ_RAT: 0.90135
   response: 7E8044144735F
+- expected_values:
+    EQ_RAT: 0.95995
+  response: 7E80441447ADF
+- expected_values:
+    EQ_RAT: 0.97557
+  response: 7E80441447CDF
 - expected_values:
     EQ_RAT: 0.98045
   response: 7E80441447D7F
@@ -15,6 +24,9 @@ test_cases:
 - expected_values:
     EQ_RAT: 0.99998
   response: 7E80441447FFF
+- expected_values:
+    EQ_RAT: 1.04002
+  response: 7E8044144851F
 - expected_values:
     EQ_RAT: 1.99
   response: 7E8044144FFFF
