--- a/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220103|fc=1.yaml
@@ -121,6 +121,86 @@ test_cases:
     7EC24AFAFAFAFAFAFAF
     7EC25AFAFAFAFAFAAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.5
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFAFB0B0B0B0B0
+    7EC22AFB0B0B0B0B0B0
+    7EC23B0B0B0B0AFAFB0
+    7EC24AFB0AFB0B0AFAF
+    7EC25B0B0B0AFAFAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.52
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFAFB0B0B0B0B0
+    7EC22B0B0B0B0B0B0B0
+    7EC23B0B0B0B0B0B0B0
+    7EC24B0B0B0B0B0B0B0
+    7EC25B0B0B0B0B0AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.52
     SANTAFEHYB_HVBAT_CMU035_VOLT: 3.52
@@ -442,6 +522,46 @@ test_cases:
     7EC25C0C0C0BFBFAAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 3.84
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 3.82
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 3.82
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFBFBFBFC0BFBF
+    7EC22BFBFBFBFBFBFBF
+    7EC23BFBFBFBFBFBFBF
+    7EC24BFBFBFBFBFBFBF
+    7EC25BFBFBFBFBFAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 3.82
     SANTAFEHYB_HVBAT_CMU034_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU035_VOLT: 3.84
     SANTAFEHYB_HVBAT_CMU036_VOLT: 3.84
@@ -710,7 +830,7 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU059_VOLT: 4.1
     SANTAFEHYB_HVBAT_CMU060_VOLT: 4.1
     SANTAFEHYB_HVBAT_CMU061_VOLT: 4.1
-    SANTAFEHYB_HVBAT_CMU062_VOLT: 4.1
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 4.12
     SANTAFEHYB_HVBAT_CMU063_VOLT: 4.1
     SANTAFEHYB_HVBAT_CMU064_VOLT: 4.1
   response: |-
@@ -719,4 +839,44 @@ test_cases:
     7EC22CDCDCDCDCDCDCD
     7EC23CDCDCDCDCDCDCD
     7EC24CDCDCDCDCDCDCD
-    7EC25CDCDCDCDCDAAAA
+    7EC25CDCDCECDCDAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU033_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU034_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU035_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU036_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU037_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU038_VOLT: 4.1
+    SANTAFEHYB_HVBAT_CMU039_VOLT: 4.1
+    SANTAFEHYB_HVBAT_CMU040_VOLT: 4.1
+    SANTAFEHYB_HVBAT_CMU041_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU042_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU043_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU044_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU045_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU046_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU047_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU048_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU049_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU050_VOLT: 4.1
+    SANTAFEHYB_HVBAT_CMU051_VOLT: 4.1
+    SANTAFEHYB_HVBAT_CMU052_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU053_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU054_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU055_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU056_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU057_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU058_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU059_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU060_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU061_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU062_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU063_VOLT: 4.12
+    SANTAFEHYB_HVBAT_CMU064_VOLT: 4.12
+  response: |-
+    7EC1027620103FFFFFF
+    7EC21FFCECECECECECD
+    7EC22CDCDCECECECECE
+    7EC23CECECECECDCDCE
+    7EC24CECECECECECECE
+    7EC25CECECECECEAAAA
