Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -79,6 +79,18 @@ test_cases:
     SANTAFEHYB_TP_RR: 0
   response: |-
     7A8102462C00BFFFFFF
+    7A821F8AB36000100AE
+    7A82236000400A83700
+    7A8230400AB37000500
+    7A824FF8DB08DB08DB0
+    7A8258DB0AAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 34.2
+    SANTAFEHYB_TP_FR: 0
+    SANTAFEHYB_TP_RL: 0.8
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
     7A821F8AB37000400B0
     7A82239000400B33E00
     7A8230600AB37000500
