Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
@@ -1,45 +1,45 @@
 command_id: 7E4.7EC.220102|fc=1
 test_cases:
 - expected_values:
-    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.28
-    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.3
-    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.34
-    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.34
-    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.32
-    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.32
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.26
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.3
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.3
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.3
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.3
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.28
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.28
   response: |-
     7EC1027620102FFFFFF
-    7EC21FFA4A5A6A6A6A6
-    7EC22A6A6A6A6A6A7A6
-    7EC23A6A6A6A6A6A6A6
-    7EC24A6A6A6A7A6A6A6
-    7EC25A6A6A6A6A6AAAA
+    7EC21FFA3A4A4A4A4A4
+    7EC22A4A4A4A4A5A5A5
+    7EC23A4A4A4A4A4A4A4
+    7EC24A4A4A4A5A4A4A4
+    7EC25A4A4A4A4A4AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.34
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.36
@@ -200,6 +200,46 @@ test_cases:
     7EC23AFAFB0B0AFB0B0
     7EC24B0B0AFB0AFAFAF
     7EC25AFAFAFAFAFAAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.48
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.52
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.5
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.5
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FFAEAFAFB0B0B0
+    7EC22B0B0B0B0B0B0B0
+    7EC23B0AFB0B0B0B0B0
+    7EC24B0B0B0B0AFAFB0
+    7EC25B0B0B0AFAFAAAA
 - expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.5
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.5
