--- a/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
+++ b/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
@@ -37,6 +37,15 @@ test_cases:
     7EA2400000000FFECFF
     7EA25ECFFECFFECAAAA
 - expected_values:
+    SANTAFEHYB_VPWR: 3
+  response: |-
+    7EA102762E004BD71F0
+    7EA210000000008001F
+    7EA22D0072E00000000
+    7EA2300000303000000
+    7EA2400000000FFECFF
+    7EA25EC00030003AAAA
+- expected_values:
     SANTAFEHYB_VPWR: 0
   response: |-
     7EA102762E004BD71F0
@@ -72,6 +81,15 @@ test_cases:
     7EA2300000101000000
     7EA2400000000FFECFF
     7EA25ECFFEDFFEDAAAA
+- expected_values:
+    SANTAFEHYB_VPWR: 3
+  response: |-
+    7EA102762E004BD71F0
+    7EA21000000000B001F
+    7EA22B4074900000000
+    7EA2300000303000000
+    7EA2400000000FFE5FF
+    7EA25E500030003AAAA
 - expected_values:
     SANTAFEHYB_VPWR: 3
   response: |-
