Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
+++ b/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
@@ -196,6 +196,19 @@ test_cases:
     7EF25FBFFFF0F0F00FF
     7EF26FFAAAAAAAAAAAA
 - expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 22
+    SANTAFEHYB_TIRE_FR_SPD: 19
+    SANTAFEHYB_TIRE_RL_SPD: 22
+    SANTAFEHYB_TIRE_RR_SPD: 19
+  response: |-
+    7EF102A62C101FFD7E7
+    7EF21700000150A04EC
+    7EF22D416131613FF7C
+    7EF23FF0030F5010001
+    7EF24FFFF76A806FB06
+    7EF251DFFFF000000FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
     SANTAFEHYB_TIRE_FL_SPD: 57
     SANTAFEHYB_TIRE_FR_SPD: 57
     SANTAFEHYB_TIRE_RL_SPD: 57
