--- a/tests/test_cases/2025/commands/7E0.0106.yaml
+++ b/tests/test_cases/2025/commands/7E0.0106.yaml
@@ -4,5 +4,5 @@ test_cases:
     SHRTFT1: -42.84375
   response: 7E80341066D
 - expected_values:
-    SHRTFT1: -20.96875
-  response: '7E803410689'
+    SHRTFT1: -18.625
+  response: 7E80341068C
