Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -439,6 +439,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 49.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF630000000000
+    7EC22FDF80A7E221D1E
+    7EC2321211D00002BBB
+    7EC2402BA0E04499100
+    7EC2500A4B70000A48A
+    7EC2600002C3B00002A
+    7EC2702000F99B40001
+    7EC280D05960DDA03E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 51
   response: |-
     7EC103E6201018FF3FF
