--- a/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
+++ b/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
@@ -59,6 +59,19 @@ test_cases:
     SANTAFEHYB_TIRE_RR_SPD: 0
   response: |-
     7EF102A62C101FFD7E7
+    7EF21700000000A01DB
+    7EF22D400000000FF7C
+    7EF23FF0034F5010001
+    7EF24FFFF8890080507
+    7EF25F8FFFF151500FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 0
+    SANTAFEHYB_TIRE_FR_SPD: 0
+    SANTAFEHYB_TIRE_RL_SPD: 0
+    SANTAFEHYB_TIRE_RR_SPD: 0
+  response: |-
+    7EF102A62C101FFD7E7
     7EF21700000000A01DC
     7EF22D400000000FF7F
     7EF23FF0030F5010001
