Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -99,6 +99,30 @@ test_cases:
 - expected_values:
     SANTAFEHYB_TP_FL: 34
     SANTAFEHYB_TP_FR: 0
+    SANTAFEHYB_TP_RL: 0.8
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
+    7A821F8AA36000400AF
+    7A82237000400A83500
+    7A8230400AA35000600
+    7A824338DB08DB08DB0
+    7A8258DB0AAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 34
+    SANTAFEHYB_TP_FR: 0
+    SANTAFEHYB_TP_RL: 1.2
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
+    7A821F8AA36000400B0
+    7A82237000600A83500
+    7A8230400AB35000600
+    7A824338DB08DB08DB0
+    7A8258DB0AAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 34
+    SANTAFEHYB_TP_FR: 0
     SANTAFEHYB_TP_RL: 1.2
     SANTAFEHYB_TP_RR: 0
   response: |-
@@ -115,10 +139,10 @@ test_cases:
     SANTAFEHYB_TP_RR: 0
   response: |-
     7A8102462C00BFFFFFF
-    7A821F8AB48000600AF
-    7A82247000600B04500
-    7A8230600AA44000600
-    7A8243F8DB08DB08DB0
+    7A821F8AB36000600B1
+    7A82237000600AA3600
+    7A8230600AD35000600
+    7A824338DB08DB08DB0
     7A8258DB0AAAAAAAAAA
 - expected_values:
     SANTAFEHYB_TP_FL: 34.6
