Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -115,6 +115,18 @@ test_cases:
     SANTAFEHYB_TP_RR: 0
   response: |-
     7A8102462C00BFFFFFF
+    7A821F8A42E000400A8
+    7A8222F000400A42E00
+    7A8230400A62F000400
+    7A8242D8DB08DB08DB0
+    7A8258DB0AAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 32.8
+    SANTAFEHYB_TP_FR: 0
+    SANTAFEHYB_TP_RL: 0.8
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
     7A821F8A42F000400AB
     7A82230000400A42E00
     7A8230400A62F000400
