Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -124,6 +124,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 41
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF520000000000
+    7EC22FF9A0A0D1F1D1F
+    7EC231F1F1D00002AB2
+    7EC243DB20100009200
+    7EC2500AECB0000AEA2
+    7EC2600002EF400002C
+    7EC2799001087650001
+    7EC28010C001DA503E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 42
   response: |-
     7EC103E6201018FF3FF
