Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -574,6 +574,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 51.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF670000000000
+    7EC2202520A02231E20
+    7EC2322221E00002DB2
+    7EC2424B10104499000
+    7EC2500AF2F0000AF01
+    7EC2600002F0E00002C
+    7EC27B10010914A0000
+    7EC28FF0701000003E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 52.5
   response: |-
     7EC103E6201018FF3FF
