Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
+++ b/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
@@ -170,6 +170,19 @@ test_cases:
     7EF25FFFFFF000000FF
     7EF26FFAAAAAAAAAAAA
 - expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 3
+    SANTAFEHYB_TIRE_FR_SPD: 3
+    SANTAFEHYB_TIRE_RL_SPD: 3
+    SANTAFEHYB_TIRE_RR_SPD: 2
+  response: |-
+    7EF102A62C101FFD7E7
+    7EF21700000030A04DC
+    7EF22D403030302FF84
+    7EF23FF0030F5010001
+    7EF24FFFF712907D907
+    7EF2573FFFF000000FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
     SANTAFEHYB_TIRE_FL_SPD: 8
     SANTAFEHYB_TIRE_FR_SPD: 7
     SANTAFEHYB_TIRE_RL_SPD: 8
