Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220105|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220105|fc=1.yaml
@@ -121,14 +121,14 @@ test_cases:
     7EC2576000000000000
     7EC260000000000AAAA
 - expected_values:
-    SANTAFEHYB_HVBAT_SOC_DISP: 64
+    SANTAFEHYB_HVBAT_SOC_DISP: 66
   response: |-
     7EC102E620105E03A64
-    7EC2100008241007A00
+    7EC210000841F007B00
     7EC2200000000000014
     7EC23B4190000005000
-    7EC240003E841000000
-    7EC2580000000000000
+    7EC240003E81F000000
+    7EC2584000000000000
     7EC260000000000AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_SOC_DISP: 49.5
@@ -169,4 +169,17 @@ test_cases:
     7EC238B190000005000
     7EC240003E841000000
     7EC2593000000000000
+    7EC260000000000AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_SOC_DISP: 66
+  response: |-
+    7EC23BEBDBEBEBEBEBE
+    7EC24BEBEBEBEBDBDBD
+    7EC25BDBDBDBEBEAAAA
+    7EC102E620105E03A64
+    7EC210000841F007B00
+    7EC2200000000000014
+    7EC23B4190000005000
+    7EC240003E81F000000
+    7EC2584000000000000
     7EC260000000000AAAA
